Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -938,6 +938,7 @@ img{
   }
   body{
     margin: 0;
+    overflow-x: none !important;
   }
   .section{
     padding: 6rem 0 4rem !important;
